Convert popup to animated dialog, add delete option
Converted the popup to an animated dialof with a background picture of
a bookshelf. Added a deleted option on the end of each row, that deletes
the book information from the row and removes the book data from the
myLibrary array. Could add a clear all option for the displayed table,
or prevent table from adding more content if all are displayed.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
 
-  <button class="open-button" onclick="openForm()">Open Form</button>
+  <button class="openForm">Open Form</button>
   
-  <div class="form-popup" id="myForm">
+  <dialog>
     <form id="form">
       <label for="author">Author</label><input type="text" name="author" id="author">
       <label for="name">Title</label><input type="text" name="name" id="name">
       <label for="pages">Pages</label><input type="text" name="pages" id="pages">
       <label for="read">Read</label><input type="text" name="read" id="read">
       <button type="submit">submit</button>
-      <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+      <button type="button" class="closeForm">Close</button>
     </form>
-  </div>
+  </dialog>
 
   <button class="display">Display Table</button>
   <p></p>
